objects/SDO_OMS_Export_FOI__c.object
<CustomObject>
    <description>What: OMS Object for Export Fulfillment order. used in Apex.</description>
    <fields>
        <fullName>ExportDate__c</fullName>
        <label>ExportDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportName__c</fullName>
        <label>ExportName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Export_FOI</label>
    <nameField>
        <label>Export_FOI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Export_FOIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>